--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Simple HTML test project with Nginx",
   "scripts": {
-    "test": "mocha test/unit.test.js",  // Run unit tests
-    "test:integration": "mocha test/integration.test.js"  // Run integration tests
+    "test": "mocha test/unit.test.js",  
+    "test:integration": "mocha test/integration.test.js" 
   },
   "devDependencies": {
     "chai": "^4.3.4",
     "mocha": "^9.1.2",
-    "chai-http": "^4.3.0"  // For HTTP requests in integration tests
+    "chai-http": "^4.3.0"  
   }
 }
