--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,16 +7,19 @@ on:
 
 jobs:
   deploy:
-    runs-on: self-hosted # Using your EC2 as a self-hosted runner
+    runs-on: self-hosted  # Uses EC2 instance as the runner
 
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
 
+    - name: Log in to Docker Hub  # Optional if pushing to DockerHub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
     - name: Build Docker Image
       run: docker build -t my-html-app .
 
-    - name: Stop and Remove Old Container
+    - name: Stop and Remove Old Container (if exists)
       run: |
         docker stop my-html-container || true
         docker rm my-html-container || true
